--- a/b.html
+++ b/b.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-   <div>来自b页面上的代码</div>
+    <div>来自b页面上的代码</div>
+    <script type="text/javascript">
+        document.domain = 'gaokaomim.github.io'; //设置成主域
+    </script>
 </body>
 
 </html>
