--- a/a.html
+++ b/a.html
@@ -17,13 +17,27 @@
             var name = win.name; //这里同样获取不到window对象的name属性
         }
     </script> -->
-    <iframe id="iframe" src="https://gaokaomim.github.io/kuayu/b.html" onload="test()"></iframe>
+    <!-- <iframe id="iframe" src="https://gaokaomim.github.io/kuayu/b.html" onload="test()"></iframe> -->
     <script type="text/javascript">
-        document.domain = 'gaokaomim.github.io'; //设置成主域
-        function test() {
-            alert(document.getElementById('￼iframe').contentWindow); //contentWindow 可取得子窗口的 window 对象
-        }
+        // document.domain = 'gaokaomim.github.io'; //设置成主域
+        // function test() {
+        //     alert(document.getElementById('￼iframe').contentWindow); //contentWindow 可取得子窗口的 window 对象
+        // }
+        window.name="我是来自a页面";
+        setTimeout(function(){
+            window.location='b.html';
+        },1000)
+        // function getData() {
+        //     var iframe = document.getElementById('proxy');
+        //     iframe.onload = function () {
+        //         var data = iframe.contentWindow.name;
+        //         alert(data)
+        //     }
+        //     iframe.src = 'about:blank';
+        // }
     </script>
+
+    <iframe id="proxy" src="http://www.cnblogs.com/data.html" style="display:none" onload="getData()"></iframe>
 </body>
 
 </html>
