--- a/b.html
+++ b/b.html
@@ -11,7 +11,7 @@
 <body>
     <div>来自b页面上的代码</div>
     <script type="text/javascript">
-        document.domain = 'gaokaomim.github.io'; //设置成主域
+       alert(window.name)
     </script>
 </body>
 
